2013-09-17  Ivan Vucica <ivan@vucica.net>

	* Source/opal/OpalContext.m:
	Added note that -supportsDrawGState should be implemented.

	* Source/opal/OpalGState.m:
	Fixed temporary code for painting colored rectangles in place of text.
	Partially fixed -GSShowGlyphsWithAdvances::: by removing temporary code
	for painting colored rectangles, and by setting text matrix in
	GSSetFont:.

2013-09-17  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/opal/OpalFontInfo.m: Move font space to user space conversion
	to a separate method. Implement -glyphIsEncoded:, -advancementForGlyph:,
	-glyphForCharacter:, -glyphWithName:.

	For -boundingRectForGlyph:, and -widthOfString:, return fake, fixed
	values.
	* Source/opal/OpalContext.m: Fix -isDrawingToScreen implementation;
	it now returns YES. This has the unfortunate side effect of breaking
	image drawing... but, on the positive side, causes NSLayoutManager
	to make calls to GSShowGlyphsWithAdvances in batches of up to
	16 glyphs, instead of one at a time...!
	* Source/opal/OpalGState.m: Implement -GSSetFont:, and make
	-GSShowGlyphsWithAdvances: call CGContextShowGlyphsWithAdvances

	Overall state is glyphs are drawn.. they appear upside down,
	and the glyph runs only seem to draw at (0, 0).

2013-09-17  Ivan Vucica <ivan@vucica.net>

	* Source/opal/OpalFontInfo.m:
	Fixed scale of metrics by using unitsPerEm and pointSize.

2013-09-17  Ivan Vucica <ivan@vucica.net>

	* configure:
	* configure.ac:
	Added fontconfig and freetype as dependencies for Opal. configure
	script is not actually regenerated from configure.ac and contains
	a simplified piece of code which just appends relevant options to
	CPPFLAGS and LIBS.

	* Source/opal/GNUmakefile:
	Added fontconfig/ implementation files, like it was done in cairo
	backend.

	* Headers/opal/OpalFaceInfo.h:
	* Source/opal/OpalFaceInfo.m:
	Now copied from CairoFaceInfo and modified to use Core Graphics.

	* Headers/opal/OpalFontInfo.h:
	* Source/opal/OpalFontInfo.m: